FlexDeploy 7.0/objects/Book__c.object
<CustomObject>
    <fields>
        <fullName>Book_ID__c</fullName>
        <formula>IF(ISPICKVAL(Book_Type_Code__c,&apos;ED&apos;),&apos;ED-&apos;+Sr_No__c,Sr_No__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Book ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Book_Review__c</fullName>
        <inlineHelpText>Add Review Here (4 to 5 Lines)</inlineHelpText>
        <label>Book Review</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Book_Type_Code__c</fullName>
        <label>Book Type Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>RS</fullName>
                </value>
                <value>
                    <fullName>GK</fullName>
                </value>
                <value>
                    <fullName>DS</fullName>
                </value>
                <value>
                    <fullName>MV</fullName>
                </value>
                <value>
                    <fullName>ED</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>Company__c</referenceTo>
        <relationshipLabel>Books</relationshipLabel>
        <relationshipName>Books</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sr_No__c</fullName>
        <displayFormat>{0}</displayFormat>
        <label>Sr No</label>
        <type>AutoNumber</type>
    </fields>
    <label>Book</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Sr_No__c</columns>
        <columns>NAME</columns>
        <columns>Book_ID__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Book_Type_Code__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Book Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Books</pluralLabel>
    <recordTypes>
        <fullName>International</fullName>
        <active>true</active>
        <label>International</label>
    </recordTypes>
    <recordTypes>
        <fullName>National</fullName>
        <active>true</active>
        <label>National</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>